# ai-worker

./: .bandit  .dockerignore  .env.sample  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  DOCKER.md  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.treace.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-test.in  requirements.in  requirements.txt
.github/workflows/: ci.yml  docker.yml  security.yml
app/: depends.py  main.py
app/api/: router.py
app/api/endpoints/: exams.py  generate.py  modification.py  rag.py
app/api/endpoints_v2/: generate.py
app/core/: config.py  consts.py  depends.py  exceptions.py  fastapi_depends.py  global_depends.py
app/llms/: executor.py  factory.py  service.py
app/llms/adaper/: __init__.py  rag_mixins.py  tracing.py
app/llms/tool/: agent_tools.py
app/middleware/: __init__.py  trace_id.py
app/prompts/: loader.py  registry.yaml  subject_prompt_router.py
app/prompts/exam/: matrix_sys_prompt.st  matrix_sys_prompt_rag.st  matrix_usr_prompt.st  matrix_v2_sys_prompt.st  questions_sys_prompt.st  questions_usr_prompt.st
app/prompts/image/: sys_prompt.st  usr_prompt.st
app/prompts/mindmap/: sys_prompt.st  sys_prompt_rag.st  usr_prompt.st
app/prompts/modification/: expand_slide.st  generate_image.st  refine_content.st  refine_element_text.st  replace_element_image.st  transform_layout.st
app/prompts/outline/: sys_prompt.st  sys_prompt_rag.st  usr_prompt.st
app/prompts/presentation/: sys_prompt.st  sys_prompt_rag.st  usr_prompt.st
app/prompts/question/: sys_prompt.st  sys_prompt_context.st  sys_prompt_rag.st  usr_prompt.st  usr_prompt_context.st
app/prompts/subject/: english_sys_prompt.st  (+2 more)
app/repositories/: document_embeddings_repository.py  llm_result_repository.py
app/schemas/: exam_content.py  image_content.py  mindmap_content.py  modification.py  slide_content.py  token_usage.py
app/services/: base_rag_service.py  content_rag_service.py  content_service.py  exam_rag_service.py  exam_service.py  image_mock.txt  mindmap_rag_service.py  modification_service.py  slide_rag_service.py
app/utils/: constants.py  server_sent_event.py  server_side_event.py  token_tracker.py  tracing.py
fe/: README.md  index.html
ingestion_app/: PGVECTOR_SETUP.md  README.md  __init__.py  debug_pdf.py  documents_chunking.py  documents_embedding.py  documents_loader.py  main.py  metadata_parser.py  vector_store.py
localai_config/: config.yaml
scripts/: build-image.sh  setup-pre-commit.sh
tests/: __init__.py  conftest.py  test_fill_in_blank_schema.py  test_prompt_loader.py  test_question_schemas.py
web_test_api/: index.html
(+49 files in other folders)
